--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@angular/platform-browser": "^16.2.0",
     "@angular/platform-browser-dynamic": "^16.2.0",
     "@angular/router": "^16.2.0",
+    "jwt-decode": "^3.1.2",
     "marked": "^4.3.0",
     "ngx-cookie-service": "^16.0.1",
     "ngx-markdown": "^16.0.0",
